// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup renders correctly 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-vjvakd-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-19aftkk-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1xbtwks-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1xbtwks-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #5e127e40;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1x9cp5u-StyledRow {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-vjvakd-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-1"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-1"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-2"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-2"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with direction row 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-vjvakd-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4lkpn5-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-19aftkk-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1xbtwks-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1xbtwks-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #5e127e40;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1x9cp5u-StyledRow {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-vjvakd-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-4lkpn5-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-1"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-1"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-2"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-2"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with error content 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-vjvakd-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-19aftkk-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1xbtwks-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1xbtwks-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #5e127e40;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1x9cp5u-StyledRow {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1x94vqj-StyledText {
  color: #b3144d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-vjvakd-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-1"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-1"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-2"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-2"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <p
      class="cache-1x94vqj-StyledText e13y3mga0"
    >
      Eror content
    </p>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with helper content 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-vjvakd-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-19aftkk-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1xbtwks-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1xbtwks-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #5e127e40;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1x9cp5u-StyledRow {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-5q2bke-StyledText {
  color: #727683;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-vjvakd-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-1"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-1"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-2"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-2"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <p
      class="cache-5q2bke-StyledText e13y3mga0"
    >
      Helper content
    </p>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-vjvakd-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-19aftkk-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1xbtwks-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1xbtwks-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #5e127e40;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1x9cp5u-StyledRow {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-vjvakd-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox."
              name="Checkbox."
              type="checkbox"
              value="value-1"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox."
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox."
              name="Checkbox."
              type="checkbox"
              value="value-2"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox."
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with required prop 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-vjvakd-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1f47cnh-sizeStyles-StyledRequiredIcon {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.cache-19aftkk-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #521094;
  stroke: #521094;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #3b1a61;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-19aftkk-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-19aftkk-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1xbtwks-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1xbtwks-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #521094;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1xbtwks-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #5e127e40;
}

.cache-1xbtwks-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #3b1a61;
  fill: #e5dbfd;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1xbtwks-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1x9cp5u-StyledRow {
  display: grid;
  grid-template-columns: 11fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-vjvakd-StyledText e13y3mga0"
        >
          Label 
          <svg
            class="e1k5uyng0 cache-1f47cnh-sizeStyles-StyledRequiredIcon e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-1"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-1"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="cache-19aftkk-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="cache-1xbtwks-CheckboxInput eqr7bqq2"
              id="Checkbox.value-2"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-113ljh8-Stack ehpbis70"
            >
              <div
                class="cache-1x9cp5u-StyledRow e3f5lzv0"
              >
                <label
                  class="cache-huyxwn-StyledLabel eqr7bqq3"
                  for="Checkbox.value-2"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
